dnl 
dnl   Copyright 2001, 2005 Adrian Thurston <thurston@complang.org>
dnl

dnl   This file is part of Kelbt.
dnl  
dnl   Kelbt is free software; you can redistribute it and/or modify
dnl   it under the terms of the GNU General Public License as published by
dnl   the Free Software Foundation; either version 2 of the License, or
dnl   (at your option) any later version.
dnl   
dnl   Kelbt is distributed in the hope that it will be useful,
dnl   but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl   GNU General Public License for more details.
dnl   
dnl   You should have received a copy of the GNU General Public License
dnl   along with Kelbt; if not, write to the Free Software
dnl   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA 
  
AC_INIT(kelbt/main.cpp)
AC_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CXX
#AC_DEFINE_UNQUOTED(CXX,$CXX)

dnl Set test on c++ compiler.
AC_LANG_CPLUSPLUS

dnl Check for definition of MAKE.
AC_PROG_MAKE_SET

dnl write output files
AC_OUTPUT(Makefile kelbt/Makefile)

echo "configuration of kelbt complete"
